ec2.tf
# API Server EC2 instance 생성
resource "aws_instance" "api_server" {
  ami                    = "ami-01cbcf53c1503fe8a"
  instance_type          = "t3.small"
  subnet_id              = aws_subnet.public_a.id
  vpc_security_group_ids = [aws_security_group.sg_api_server.id]
  key_name               = "mirrorsoul-api-key"

  iam_instance_profile = aws_iam_instance_profile.api_server_profile.name # API 서버에 IAM Role을 붙임.

  root_block_device {
    volume_size = 10
    volume_type = "gp3"
  }

  tags = {
    Name = "mirrorsoul-api-server"
  }
}

# AI Server EC2 instance 생성
resource "aws_instance" "ai_server" {
  ami                    = "ami-01cbcf53c1503fe8a"
  instance_type          = "t3.small"
  subnet_id              = aws_subnet.public_a.id
  vpc_security_group_ids = [aws_security_group.sg_ai_server.id]
  key_name               = "mirrorsoul-ai-key"

  iam_instance_profile = aws_iam_instance_profile.ai_server_profile.name # AI 서버에 IAM Role을 붙임.

  root_block_device {
    volume_size = 20
    volume_type = "gp3"
  }

  tags = {
    Name = "mirrorsoul-ai-server"
  }
}

# Call Server EC2 instance 생성
resource "aws_instance" "call_server" {
  ami                    = "ami-01cbcf53c1503fe8a"
  instance_type          = "t3.small"
  subnet_id              = aws_subnet.public_a.id
  vpc_security_group_ids = [aws_security_group.sg_call_server.id]
  key_name               = "mirrorsoul-call-key"

  iam_instance_profile = aws_iam_instance_profile.call_server_profile.name

  root_block_device {
    volume_size = 30
    volume_type = "gp3"
  }

  tags = {
    Name = "mirrorsoul-call-server"
  }
}
