rds-mysql.tf
# RDS가 들어갈 Subnet group
resource "aws_db_subnet_group" "main" {
  name = "mirrorsoul-rds-subnet-group"

  subnet_ids = [
    aws_subnet.public_a.id,
    aws_subnet.public_b.id
  ]

  tags = {
    Name = "mirrorsoul-rds-subnet-group"
  }
}

# RDS 용 Security group
resource "aws_security_group" "rds_sg" {
  name        = "mirrorsoul-rds-sg"
  description = "Allow MySQL from EC2 only"
  vpc_id      = aws_vpc.main.id

  # API Server에서의 접근 허용
  ingress {
    description = "MySQL from API Server"
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"

    security_groups = [
      aws_security_group.sg_api_server.id
    ]
  }

  # AI Server에서의 접근 허용
  ingress {
    description = "MySQL from AI Server"
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"

    security_groups = [
      aws_security_group.sg_ai_server.id
    ]
  }

  # 전체 허용. !임시 개발용!
  ingress {
    description = "MySQL from ALL"
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  # outbound 전체 허용
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "mirrorsoul-rds-sg"
  }
}

# 실제 MySQL RDS 인스턴스
resource "aws_db_instance" "mysql" {
  identifier = "mirrorsoul-mysql"

  engine         = "mysql"
  engine_version = "8.4"

  instance_class = "db.t3.micro"

  allocated_storage     = 20
  max_allocated_storage = 100
  storage_type          = "gp2"

  db_name  = "mirrorsoul"
  username = "admin"
  password = var.db_password

  db_subnet_group_name = aws_db_subnet_group.main.name

  vpc_security_group_ids = [
    aws_security_group.rds_sg.id
  ]

  publicly_accessible = true
  multi_az            = false

  skip_final_snapshot = true
  deletion_protection = false

  backup_retention_period = 7

  # MySQL 8.0 -> 8.4 메이저 버전 업그레이드 허용
  allow_major_version_upgrade = true

  # terraform apply 시 즉시 업그레이드
  apply_immediately = true

  tags = {
    Name = "mirrorsoul-mysql"
  }
}
